src/test/resources/syntax/invalid/group_definition_multiple_formats.unpick
unpick v3
const int
    format = decimal
    format = hex